--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,7 @@ dl,dt,dd,ol,ul,li {list-style:none;margin:0;padding:0;}
 .filter-type-item {display:inline-block;}
 .filter-type-item a {display:block;padding:15px 7px;line-height:17px;font-size:14px;color:#777;text-decoration:none;border-bottom:2px solid transparent;}
 .active a {font-weight:bold;color:#4990e2;border-bottom-color:#4990e2;}
-.filter-reset{display: inline-block;cursor:pointer;padding: 0 16px;border: none;border-radius: 4px;line-height: 26px;font-size: 12px;letter-spacing: -0.5px;color: #fff;background: #5383e8;text-decoration: none;margin: 10px 20px;float: right;}
+.filter-reset{display: inline-block;cursor:pointer;padding: 0 16px;border: none;border-radius: 4px;line-height: 26px;font-size: 15px;letter-spacing: -0.5px;color: #fff;background: #5383e8;text-decoration: none;margin: 10px 20px;float: right;width:80px; height: 40px;}
 .list {margin:10px 8px;font-size:0;}
 .list-item {position:relative;display:inline-block;margin-top:20px;margin-left:12px;width:84px;vertical-align:top;}
 .list-item a {display:block;position:relative;text-decoration:none;font-size:0;}
@@ -173,5 +173,5 @@ dl,dt,dd,ol,ul,li {list-style:none;margin:0;padding:0;}
 .spc82-151 {background-position:0px -12382px;width:82px;height:82px;}
 .spc82-152 {background-position:0px -12464px;width:82px;height:82px;}
 .spc82-153 {background-position:0px -12546px;width:82px;height:82px;}
-.list-item-name {margin-top:8px;line-height:15px;font-size:12px;text-align:left;color:#4a4a4a;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.list-item-name {margin-top:8px;line-height:15px;font-size:12px;text-align:center;color:#4a4a4a;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .list-item-true {position:absolute;left:0;top:0;margin-left:-5px;margin-top:-5px;}
